reactapp/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: reactapp
  template:
    metadata:
      labels:
        app: reactapp
    spec:
      containers:
      - name: reactapp
        image: neupaneakrur/reactapp
        ports:
        - containerPort: 80
